Version 5.5.0 (TBD)
    Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
    Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
    Fixed the `unlink` toolbar button not working when multiple links were selected #TINY-4867
Version 5.4.1 (TBD)
    Fixed zero-width caret characters included in the Search and Replace plugin results #TINY-4599
    Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
Version 5.4.0 (2020-06-30)
    Added keyboard navigation support to menus and toolbars when the editor is in a ShadowRoot #TINY-6152
    Added the ability for menus to be clicked when the editor is in an open shadow root #TINY-6091
    Added the `Editor.ui.styleSheetLoader` API for loading stylesheets within the Document or ShadowRoot containing the editor UI #TINY-6089
    Added the `StyleSheetLoader` module to the public API #TINY-6100
    Added Oxide variables for styling the `select` element and headings in dialog content #TINY-6070
    Added icons for `table` column and row cut, copy, and paste toolbar buttons #TINY-6062
    Added all `table` menu items to the UI registry, so they can be used by name in other menus #TINY-4866
    Added new `mceTableApplyCellStyle` command to the `table` plugin #TINY-6004
    Added new `table` cut, copy, and paste column editor commands and menu items #TINY-6006
    Added font related Oxide variables for secondary buttons, allowing for custom styling #TINY-6061
    Added new `table_header_type` setting to control how table header rows are structured #TINY-6007
    Added new `table_sizing_mode` setting to replace the `table_responsive_width` setting, which has now been deprecated #TINY-6051
    Added new `mceTableSizingMode` command for changing the sizing mode of a table #TINY-6000
    Added new `mceTableRowType`, `mceTableColType`, and `mceTableCellType` commands and value queries #TINY-6150