@@ -2,6 +2,7 @@ Version 5.5.0 (TBD)
     Fixed the `media` plugin not saving the alternative source url in some situations #TINY-4113
     Fixed an issue where dragging and dropping within a table would select table cells #TINY-5950
     Fixed the `unlink` toolbar button not working when multiple links were selected #TINY-4867
+    Fixed the `link` dialog not showing the "Text to display" field in some valid cases #TINY-5205
 Version 5.4.1 (TBD)
     Fixed zero-width caret characters included in the Search and Replace plugin results #TINY-4599
     Fixed content in an iframe element parsing as dom elements instead of text content #TINY-5943
